# cpp-raytracer

./: .gitattributes  .gitignore  CMakeLists.txt  README.md
include/imgui/: imconfig.h  imgui-SFML.h
include/math/: HPoint.hpp  HVector.hpp  Matrix.hpp  Point.hpp  Ray.hpp  Vector.hpp
include/maths/: Matrix.hpp  Point.hpp  Vector.hpp
include/scene/: Camera.hpp  Color.hpp  Cube.hpp  Cylinder.hpp  Cylindre.hpp  Entity.hpp  Light.hpp  Material.hpp  MaterialProvider.hpp  Object.hpp  Plane.hpp  Quad.hpp  Scene.hpp  SceneObj.hpp  Sphere.hpp  Square.hpp  Triangle.hpp
scenes/: basic.yml  cylindre.yml  multiple_lights.yml  multiple_materials.yml  plane.yml  scene1.yml  scene2.yml  scene3.yml  spheres.yml  textures.yml  triangle.yml
src/: main.cpp
src/imgui/: imgui-SFML.cpp
src/math/: HPoint.cpp  HPoint.hpp  HVector.cpp  HVector.hpp  Matrix.cpp  Point.cpp  Point.hpp  Ray.cpp  Ray.hpp  Vector.cpp  Vector.hpp
src/maths/: HPoint.cpp  HVector.cpp  Matrix.cpp  Point.cpp  Ray.cpp  Vector.cpp
src/scene/: Camera.cpp  Color.cpp  Cube.cpp  Cylinder.cpp  Cylindre.cpp  Entity.cpp  Light.cpp  Material.cpp  MaterialProvider.cpp  Object.cpp  Plane.cpp  Quad.cpp  Scene.cpp  SceneObj.cpp  Sphere.cpp  Square.cpp  Triangle.cpp
tinyfiledialogs/: README.txt
